Refactor: implemented capacity/schedule validation, time-slot search filtering, and HCMC scope enforcement